--- a/conclusion.html
+++ b/conclusion.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Home</title>
+<title>Conclusion</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -237,21 +237,12 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">KPT BST 260 Final Project Fall 2022</a>
+      <a class="navbar-brand" href="index.html">Kieran Todd's Website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
   <a href="index.html">Home</a>
-</li>
-<li>
-  <a href="introduction.html">Dataset and Question</a>
-</li>
-<li>
-  <a href="results.html">Results</a>
-</li>
-<li>
-  <a href="conclusion.html">Conclusion</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -265,14 +256,49 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Home</h1>
+<h1 class="title toc-ignore">Conclusion</h1>
 
 </div>
 
 
-<p>A Simple Difference-in-Differences Analysis of the Association
-between State-Level Transgender Policy and Number of Bad Mental Health
-Days in Nevada and Arizona</p>
+<p><strong>Conclusion</strong></p>
+<p>The data analysis suggests that Nevada, a state that Nevada may have
+had an uncommon shock that Arizona did not experience, does not allow us
+to distinguish the effect of treatment from the effect of the uncommon
+shock. Additionally, it is of note that the trajectory for both Arizona
+and Nevada shows that the number of bad mental health days was in the
+positive direction. This might require more theoretical investigation
+into what other events, political or not, that may be impacting overall
+mental health for residents in those states. Potential Violations of
+difference-in-difference identifying assumptions: parallel
+pre-trends</p>
+<p>In this analysis we assumed that the pre-trends were parallel among
+those who lived in Nevada and those who lived in Arizona. However, for
+several reasons, it could be possible that this is not true. Some
+economists argue that the parallel pre-trends assumption may be less
+valid over a longer period of time. Particularly if changes in the
+make-up of the populations of Arizona and Nevada, whereby the study
+period of ten years (2010 - 2020) may influence whether parallel
+pre-trends are a valid assumption to make.</p>
+<p><em>Future steps for future analyses</em></p>
+<p>The purpose of this simple difference-in-difference analysis was to
+see if there were any significant differences in the change of the
+average number of bad mental health days between a state that had no
+change in policy tally for affirming gender identity, and a state that
+had a high level of change in policy tally for affirming gender
+identity, as defined by MAP. To account for time-invariant,
+state-specific factors would allow us to better account for differences
+in average bad mental health days across all states at baseline (2010) –
+using state fixed effects and including many more, if not all states,
+would yield a more robust and useful analysis in some ways.</p>
+<p><strong>References</strong> 1. CDC - BRFSS. (2022, August 29). <a
+href="https://www.cdc.gov/brfss/index.html"
+class="uri">https://www.cdc.gov/brfss/index.html</a></p>
+<ol start="2" style="list-style-type: decimal">
+<li>MAP. (2022). Movement Advancement Project | Snapshot. <a
+href="https://www.lgbtmap.org/equality-maps"
+class="uri">https://www.lgbtmap.org/equality-maps</a></li>
+</ol>
 
 
 
